# lnk4-validate

./: LICENSE  README.md  check_game_profile.py  lnk4lib.py
game_profiles/: code18.json  elevene.json  sg.json
libmsxca/: BUILDING.md  CMakeLists.txt  INTEGRATION.md  README.md
libmsxca/src/: lzxd.c  msxca.c  msxca.h
libmsxca/test/: test_msxca.c
timg_converter/: convert_timg.py
